# dictate

./: .gitignore  README.md  index.html  install.ps1  install.sh  overlay.html  package-lock.json  package.json  vite.config.ts
.todo/: INDEX.json  T01-paste-module-refactor.json  T02-windows-paste-impl.json  T03-whisper-binary-path-exe.json  T04-build-whisper-ps1.json  T05-cargo-deps-windows.json  T06-tauri-conf-windows-bundle.json  T07-install-ps1.json  T08-install-sh-cross-platform.json  T09-readme-windows.json  T10-test-matrix.json  T11-github-release-workflow.json  T12-release-runbook.json
scripts/: build-whisper.ps1  build-whisper.sh
src/: App.tsx  Overlay.tsx  api.ts  overlay.css  overlayMain.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  cleanup.rs  config.rs  dictionary.rs  history.rs  lib.rs  main.rs  models.rs  paste.rs  whisper.rs
src-tauri/src/paste/: mod.rs  windows.rs
