[package]
name = "dictate"
version = "0.1.0"
edition = "2021"

[lib]
name = "dictate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.0.1"
tauri-plugin-store = "2.0.0"
tauri-plugin-autostart = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-http = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.15"
hound = "3.5"
parking_lot = "0.12"
anyhow = "1.0"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking", "stream"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
